kubernetes/example-namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: science
  labels:
    name: science

---
